--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,12 @@ cmake_minimum_required(VERSION 3.10)
 project(sigslot)
 
 set (CMAKE_CXX_STANDARD 17)
-add_compile_options(-fcoroutines-ts -stdlib=libc++)
-add_link_options(-fcoroutines-ts -stdlib=libc++)
 
 include_directories(.)
-add_definitions(-DSIGSLOT_COROUTINES)
-add_executable(example test.cc sigslot/sigslot.h)
+add_executable(example example.cc sigslot/sigslot.h)
+
+add_executable(co_example co_example.cc sigslot/sigslot.h)
+target_compile_options(co_example PUBLIC -fcoroutines-ts -stdlib=libc++)
+target_link_options(co_example PUBLIC -fcoroutines-ts -stdlib=libc++)
+target_compile_definitions(co_example PUBLIC -DSIGSLOT_COROUTINES)
+target_link_libraries(co_example pthread)
