Don't use CLang flags on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.13)
 project(sigslot)
 
 set (CMAKE_CXX_STANDARD 17)
@@ -7,7 +7,9 @@ include_directories(.)
 add_executable(example example.cc sigslot/sigslot.h)
 
 add_executable(co_example co_example.cc sigslot/sigslot.h)
-target_compile_options(co_example PUBLIC -fcoroutines-ts -stdlib=libc++)
-target_link_options(co_example PUBLIC -fcoroutines-ts -stdlib=libc++)
+if (UNIX)
+    target_compile_options(co_example PUBLIC -fcoroutines-ts -stdlib=libc++)
+    target_link_options(co_example PUBLIC -fcoroutines-ts -stdlib=libc++)
+    target_link_libraries(co_example pthread)
+endif ()
 target_compile_definitions(co_example PUBLIC -DSIGSLOT_COROUTINES)
-target_link_libraries(co_example pthread)
