--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,4 +12,7 @@ if (UNIX)
     target_link_options(co_example PUBLIC -fcoroutines-ts -stdlib=libc++)
     target_link_libraries(co_example pthread)
 endif ()
+if (WIN32)
+    target_compile_options(co_example /await)
+endif()
 target_compile_definitions(co_example PUBLIC -DSIGSLOT_COROUTINES)
