--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,6 @@ if (UNIX)
     target_link_libraries(co_example pthread)
 endif ()
 if (WIN32)
-    target_compile_options(co_example /await)
+    target_compile_options(co_example PUBLIC /await)
 endif()
 target_compile_definitions(co_example PUBLIC -DSIGSLOT_COROUTINES)
